--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,8 @@
     <script type="text/javascript" charset="utf-8" src="teavm/runtime.js"></script>
     <script type="text/javascript" charset="utf-8" src="teavm/classes.js"></script>
   </head>
-  <body onload="main()">
+  <body>
+    <button onclick="main()">Start</button>
     <canvas id="invaders-canvas" width="800" height="600"></canvas>
   </body>
 </html>
