Fix bug in pixmap. Eliminate pixmap leak

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,11 @@
     <script type="text/javascript" charset="utf-8" src="teavm/classes.js"></script>
   </head>
   <body>
-    <button onclick="main()">Start</button>
-    <canvas id="invaders-canvas" width="800" height="600"></canvas>
+    <div>
+      <canvas id="invaders-canvas" width="800" height="600"></canvas>
+    </div>
+    <div>
+      <button onclick="main()">Start</button>
+    </div>
   </body>
 </html>
