--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,12 +7,9 @@
     <script type="text/javascript" charset="utf-8" src="teavm/classes.js"></script>
     <script type="text/javascript" src="webgl-debug.js"></script>
   </head>
-  <body>
+  <body onload="main()">
     <div>
       <canvas id="invaders-canvas" width="800" height="600"></canvas>
-    </div>
-    <div>
-      <button onclick="main()">Start</button>
     </div>
   </body>
 </html>
